--- a/assets/css/rpwe-frontend.css
+++ b/assets/css/rpwe-frontend.css
@@ -9,7 +9,7 @@
   margin-bottom: 10px;
   padding-bottom: 10px;
   list-style-type: none;
-  display: inline-block;
+  display: block;
 }
 
 .rpwe-block a {
