--- a/assets/css/rpwe-frontend.css
+++ b/assets/css/rpwe-frontend.css
@@ -6,9 +6,10 @@
 
 .rpwe-block li {
   border-bottom: 1px solid #eee;
-  margin-bottom: 10px;
-  padding-bottom: 10px;
+  margin: 0 0 8px !important;
+  padding: 5px 0 10px !important;
   list-style-type: none !important;
+  display: block;
 }
 
 .rpwe-block a {
@@ -29,7 +30,7 @@
 .rpwe-thumb {
   border: 1px solid #eee !important;
   box-shadow: none !important;
-  margin: 2px 10px 2px 0;
+  margin: 2px 10px 2px 0 !important;
   padding: 3px !important;
 }
 
